--- a/src/app/api/api.scss
+++ b/src/app/api/api.scss
@@ -109,6 +109,13 @@ ng-md-icon {
   display: inline;
 }
 
+.gravitee-api-visibility-explanation {
+  color: rgba(0,0,0,0.26);
+  text-align: center;
+  position: relative;
+  top: -20px;
+}
+
 .gravitee-disabled {
   opacity: 0.4;
 }
