refactor: use background image for the landing page

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -18,7 +18,7 @@
 <section layout="column">
 	<md-content>
 	  <section class="landing-header">
-			<div><img src="app/images/landing-page-main-image.jpg" style="max-width: 100%;  height: auto;"></div>
+			<div class="landing-header-image"></div>
 			<section class="landing-header-content" layout-padding style="text-align:center;">		
 				<div layout="row" layout-padding>
           <div flex="33">
