refactor: allows to change api name

--- a/src/app/api/admin/general/apiGeneral.html
+++ b/src/app/api/admin/general/apiGeneral.html
@@ -25,7 +25,7 @@
   <div layout="" layout-sm="column">
     <md-input-container class="flex">
       <label>Name</label>
-      <input ng-model="apiCtrl.api.name" type="text" ng-required="true" ng-disabled="true">
+      <input ng-model="apiCtrl.api.name" type="text" ng-required="true">
     </md-input-container>
 
     <md-input-container class="flex">
