refactor: fix update of page

--- a/src/app/api/admin/apiAdmin.html
+++ b/src/app/api/admin/apiAdmin.html
@@ -17,7 +17,7 @@
 -->
 <section class="content-header">
   <div layout="row" layout-align="start center" layout-padding>
-    <ng-md-icon ng-click="apiCtrl.backToPreviousState()" icon="menu"></ng-md-icon>
+    <ng-md-icon ng-click="apisCtrl.backToPreviousState()" icon="menu"></ng-md-icon>
 
     <h1>
       {{apiCtrl.api.name}}
