--- a/src/app/api/api.scss
+++ b/src/app/api/api.scss
@@ -119,3 +119,19 @@ ng-md-icon {
 .gravitee-disabled {
   opacity: 0.4;
 }
+
+.gravitee-api-description {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 400px;
+  @media screen and (max-width: 1200px) {
+    width: 260px;
+  }
+  @media screen and (max-width: 960px) {
+    width: 200px;
+  }
+  @media screen and (max-width: 768px) {
+    width: 100px;
+  }
+}
