--- a/src/app/api/apisThumbMode.html
+++ b/src/app/api/apisThumbMode.html
@@ -22,7 +22,7 @@
 				<div class="api-box-header" ng-style="{'background-color': apisCtrl.bgColorByIndex($index)}" layout="row">
 					<div layout="column">
 						<h3>{{api.name}} <small>({{api.version}})</small></h3>
-						<h5>{{api.description}}</h5>
+						<h5 class="gravitee-api-description">{{api.description}}</h5>
 					</div>
 					<md-button class="md-icon-button md-icon-right" ng-click="$event.stopPropagation()" ui-sref="apis.admin.general({apiId: api.id})">
 						<ng-md-icon icon="settings" aria-label="{{api.id}}"></ng-md-icon>
