feat(monitoring): Monitoring management from API's administration

--- a/src/app/api/admin/apiAdmin.html
+++ b/src/app/api/admin/apiAdmin.html
@@ -30,6 +30,8 @@
         </md-tab>
         <md-tab label="members" ui-sref="apis.admin.members">
         </md-tab>
+        <md-tab label="monitoring" ui-sref="apis.admin.monitoring">
+        </md-tab>
       </md-tabs>
       <div ui-view flex></div>
     </md-card-content>
