--- a/src/app/api/apiHeader.html
+++ b/src/app/api/apiHeader.html
@@ -16,7 +16,7 @@
 
 -->
 <div layout="row" layout-align="start start">
-  <ng-md-icon ng-click="apisCtrl.backToPreviousState()" icon="menu" style="padding-top: 7px;"></ng-md-icon>
+  <ng-md-icon ng-click="apisCtrl.backToPreviousState()" icon="view_list" style="padding-top: 7px;"></ng-md-icon>
 
   <h1>
     {{apiCtrl.api.name}}
