--- a/src/app/api/admin/documentation/apiDocumentation.html
+++ b/src/app/api/admin/documentation/apiDocumentation.html
@@ -21,15 +21,16 @@
       <ng-md-icon icon="add"></ng-md-icon>
     </md-button>
     <md-divider></md-divider>
-    <md-item ng-repeat="p in documentationCtrl.pages">
-      <a ui-sref="apis.admin.documentation.page({pageId: p.id})" style="color: #666;">
-        <md-item-content md-ink-ripple layout="row" layout-align="start center">
-          <div class="inset">
-            <ng-md-icon icon="insert_drive_file"></ng-md-icon>
-          </div>
+    <md-item dragula="'pages-list'" dragula-scope="$parent" dragula-model="dpages" ng-repeat="page in documentationCtrl.pages">
+      <a ui-sref="apis.admin.documentation.page({pageId: page.id})" style="color: #333;">
+        <md-item-content layout="row" layout-align="start center">
           <md-button class="gravitee-api-page-menu-item" ng-click="documentationCtrl.selectPage(p)"
-                     ng-class="{'selected' : p.id === documentationCtrl.$state.params.pageId }">
-            {{p.title}}
+                     ng-class="{'selected' : page.id === documentationCtrl.$state.params.pageId }">
+            <div class="inset">
+              <ng-md-icon icon="more_vert"></ng-md-icon>
+              <ng-md-icon icon="insert_drive_file"></ng-md-icon>
+              {{page.title}}
+            </div>
           </md-button>
         </md-item-content>
       </a>
