fix: monitoring status

--- a/src/app/api/admin/apiMonitoring.html
+++ b/src/app/api/admin/apiMonitoring.html
@@ -17,8 +17,8 @@
 -->
 
 <div layout="" layout-sm="column">
-  <md-switch ng-model="api.monitoring.enabled"
-             ng-change="monitoringCtrl.switchEnabled(api.monitoring.enabled)" class="md-block">
+  <md-switch ng-model="monitoringCtrl.monitoringEnabled"
+             ng-change="monitoringCtrl.switchEnabled()" class="md-block">
     Enabled
   </md-switch>
 </div>
