fix: members already selected

--- a/src/app/api/admin/members/addMember.dialog.html
+++ b/src/app/api/admin/members/addMember.dialog.html
@@ -15,7 +15,7 @@
     limitations under the License.
 
 -->
-  <md-dialog aria-label="Add member">
+  <md-dialog aria-label="Add member" style="width: 60%">
     <md-toolbar>
       <div class="md-toolbar-tools">
         <h2>Add member</h2>
@@ -46,7 +46,7 @@
           		</span>
         		</md-item-template>
 				    <md-not-found>
-				      No users matching "{{searchText}}" were found.
+				      No users matching "{{searchText}}" were found, or users already selected.
 				    </md-not-found>
 				  </md-autocomplete>
 				</form>
