refactor: design sidenav + set background color to white for the main navbar

--- a/src/app/application/applications.html
+++ b/src/app/application/applications.html
@@ -18,8 +18,7 @@
 <section>
   <section class="content-header">
     <h1>
-       Gravitee
-       <small>Applications Management</small>
+       Applications
     </h1>
   </section>  
 
