--- a/src/app/components/sidenav/sidenav.scss
+++ b/src/app/components/sidenav/sidenav.scss
@@ -1,5 +1,15 @@
 .sidenav-list {
-  padding: 0px;
+ 	padding: .5rem 1.5rem 1rem;
+	color: #fff;
+}
+
+.sidenav-list a {
+	font-weight: 700;
+	color: #fff;
+}
+
+.sidenav-list ng-md-icon {
+	fill: #fff;
 }
 
 .sidenav-list-button {
@@ -7,4 +17,19 @@
 	text-align:left; 
 	margin: 0px;
 	text-transform: none;
+}
+
+#sidenav-user-name {	
+	font-size: 1.725rem;
+	font-weight: 700;
+  white-space: nowrap;
+  color: #fff;
+}
+
+#sidenav-footer a {
+  color: #B1B7BD;
+}
+
+#sidenav-footer ng-md-icon {
+	fill: #B1B7BD;
 }
