--- a/src/app/policy/policy.scss
+++ b/src/app/policy/policy.scss
@@ -42,3 +42,11 @@
     color: #0000AA;
   }
 }
+
+.gravitee-policy-method-badge {
+  margin: 2px 5px;
+}
+
+.gravitee-policy-method-badge-selected {
+  background-color: green;
+}
