feat(api policy): remove a policy

--- a/src/app/api/admin/apiPolicies.html
+++ b/src/app/api/admin/apiPolicies.html
@@ -92,6 +92,7 @@
             </md-select>
           </span>
         </md-input-container>
+        <button class="md-raised md-warn md-button" ng-click="apiPoliciesCtrl.removePolicy();">Remove</button>
       </form>
     </div>
   </div>
